# RCSB_UTILS_SEQ HISTORY
  11-Dec-2018  - V0.10 Created module supporting PDB - UniProt mapping using SIFTS
  19-Mar-2019    V0.11 Incorporate UniProt feature extraction tools.
  22-Apr-2019    V0.12 Improve cache management, broaden test coverage
  24-Jun-2019    V0.13 Update developmemt workflow
  14-Jul-2019    V0.14 Fix py27 minidom issue with 'in' operation.
   9-Sep-2019    V0.15 Add SiftsUtils() -> SiftsSummaryProvider()
  10-Sep-2019    V0.16 Convert case on PDB accession codes
  18-Sep-2019    V0.17 Add alignment details to the cache file
  18-Sep-2019    V0.18 Address Py27 dependency issue